--- a/proposals/references.bib
+++ b/proposals/references.bib
@@ -167,3 +167,9 @@
     pages = {667--692},
     doi = {10.1021/acsinfecdis.1c00546}
 }
+@misc{DHHS2023,
+    author = {{Panel on Antiretroviral Guidelines for Adults and Adolescents}},
+    title = {Guidelines for the Use of Antiretroviral Agents in Adults and Adolescents with HIV},
+    year = {2023},
+    publisher = {Department of Health and Human Services}
+}
