--- a/proposals/references.bib
+++ b/proposals/references.bib
@@ -18,6 +18,16 @@
     doi = {10.1146/annurev-pathol-050520-112001}
 }
 
+@article{Wang2018Retrovirology,
+    author = {Wang, Zheng and Simonetti, Francesco R. and Siliciano, Robert F. and Laird, Gregory M.},
+    title = {Measuring replication competent HIV-1: advances and challenges in defining the latent reservoir},
+    journal = {Retrovirology},
+    year = {2018},
+    volume = {15},
+    number = {1},
+    doi = {10.1186/s12977-018-0404-7}
+}
+
 @article{Hosmane2017JEM,
     author = {Hosmane, Nina N. and Kwon, Kyungyoon J. and Bruner, Katherine M. and Capoferri, Adam A. and Beg, Subul and Rosenbloom, Daniel I.S. and Keele, Brandon F. and Ho, Ya-Chi and Siliciano, Janet D. and Siliciano, Robert F.},
     title = {Proliferation of latently infected CD4+ T cells carrying replication-competent HIV-1: Potential role in latent reservoir dynamics},
@@ -47,6 +57,116 @@
     doi = {10.1073/pnas.1017572108}
 }
 
+@article{Zeldovich2007PNAS,
+    author = {Zeldovich, Konstantin B. and Chen, Peiqiu and Shakhnovich, Eugene I.},
+    title = {Protein stability imposes limits on organism complexity and speed of molecular evolution},
+    journal = {Proceedings of the National Academy of Sciences},
+    year = {2007},
+    volume = {104},
+    pages = {16152--16157},
+    doi = {10.1073/pnas.0705366104}
+}
+
+@article{Redondo2017JRoySocInterface,
+    author = {Redondo, Rodrigo A. F. and de Vladar, Harold P. and Włodarski, Tomasz and Bollback, Jonathan P.},
+    title = {Evolutionary interplay between structure, energy and epistasis in the coat protein of the $\phi$X174 phage family},
+    journal = {Journal of The Royal Society Interface},
+    year = {2017},
+    volume = {14},
+    pages = {20160139},
+    doi = {10.1098/rsif.2016.0139}
+}
+
+@article{Klein2018mSphere,
+    author = {Klein, Eili Y. and Blumenkrantz, Deena and Serohijos, Adrian and Shakhnovich, Eugene and Choi, Jeong-Mo and Rodrigues, João V. and Smith, Brendan D. and Lane, Andrew P. and Feldman, Andrew and Pekosz, Andrew},
+    title = {Stability of the Influenza Virus Hemagglutinin Protein Correlates with Evolutionary Dynamics},
+    journal = {mSphere},
+    year = {2018},
+    volume = {3},
+    doi = {10.1128/mspheredirect.00554-17}
+}
+
+@article{Zhou2008MolTher,
+    author = {Zhou, Jiehua and Li, Haitang and Li, Shirley and Zaia, John and Rossi, John J.},
+    title = {Novel dual inhibitory function aptamer-siRNA delivery system for HIV-1 therapy},
+    journal = {Molecular Therapy},
+    year = {2008},
+    volume = {16},
+    number = {8},
+    pages = {1481--1489},
+    doi = {10.1038/mt.2008.92}
+}
+
+@article{Neff2011SciTranslMed,
+    author = {Neff, Charles Preston and Zhou, Jiehua and Remling, Leila and Kuruvilla, Jes and Zhang, Jane and Li, Haitang and Smith, David D. and Swiderski, Piotr and Rossi, John J. and Akkina, Ramesh},
+    title = {An Aptamer-siRNA Chimera Suppresses HIV-1 Viral Loads and Protects from Helper CD4+ T Cell Decline in Humanized Mice},
+    journal = {Science Translational Medicine},
+    year = {2011},
+    volume = {3},
+    pages = {66ra6},
+    doi = {10.1126/scitranslmed.3001581}
+}
+
+@article{Zhou2013MolTher,
+    author = {Zhou, Jiehua and Neff, C. Preston and Swiderski, Piotr and Li, Haitang and Smith, David D. and Aboellail, Tawfik and Remling-Mulder, Leila and Akkina, Ramesh and Rossi, John J.},
+    title = {Functional In Vivo Delivery of Multiplexed Anti-HIV-1 siRNAs via a Chemically Synthesized Aptamer With a Sticky Bridge},
+    journal = {Molecular Therapy},
+    year = {2013},
+    volume = {21},
+    pages = {192--200},
+    doi = {10.1038/mt.2012.226}
+}
+
+@article{Zhou2015ChemBiol,
+    author = {Zhou, Jiehua and Satheesan, Sangeetha and Li, Haitang and Weinberg, Marc S. and Morris, Kevin V. and Burnett, John C. and Rossi, John J.},
+    title = {Cell-specific RNA aptamer against human CCR5 specifically targets HIV-1 susceptible cells and inhibits HIV-1 infectivity},
+    journal = {Chemistry \& Biology},
+    year = {2015},
+    volume = {22},
+    number = {3},
+    pages = {379--390},
+    doi = {10.1016/j.chembiol.2015.01.005}
+}
+
+@article{Duclair2015MTNA,
+    author = {Duclair, Sonald and Gautam, Archana and Ellington, Andrew and Prasad, Vinayaka R.},
+    title = {High-affinity RNA Aptamers Against the HIV-1 Protease Inhibit Both In Vitro Protease Activity and Late Events of Viral Replication},
+    journal = {Molecular Therapy. Nucleic Acids},
+    year = {2015},
+    volume = {4},
+    pages = {e228},
+    doi = {10.1038/mtna.2015.1}
+}
+
+@article{Lange2017NAR,
+    author = {Lange, Margaret J. and Nguyen, Phuong D. M. and Callaway, Mackenzie K. and Johnson, Marc C. and Burke, Donald H.},
+    title = {RNA--protein interactions govern antiviral specificity and encapsidation of broad spectrum anti-HIV reverse transcriptase aptamers},
+    journal = {Nucleic Acids Research},
+    year = {2017},
+    volume = {45},
+    pages = {6087--6097},
+    doi = {10.1093/nar/gkx155}
+}
+
+@article{Shum2013Pharmaceuticals,
+    author = {Shum, Ka-To and Zhou, Jiehua and Rossi, John},
+    title = {Aptamer-Based Therapeutics: New Approaches to Combat Human Viral Diseases},
+    journal = {Pharmaceuticals},
+    year = {2013},
+    volume = {6},
+    pages = {1507--1542},
+    doi = {10.3390/ph6121507}
+}
+
+@article{Chakraborty2022ACSInfectDis,
+    author = {Chakraborty, Banani and Das, Sreyashi and Gupta, Arushi and Xiong, Yanyu and T-V, Vyshnavi and Kizer, Megan E. and Duan, Jinwei and Chandrasekaran, Arun Richard and Wang, Xing},
+    title = {Aptamers for Viral Detection and Inhibition},
+    journal = {ACS Infectious Diseases},
+    year = {2022},
+    volume = {8},
+    pages = {667--692},
+    doi = {10.1021/acsinfecdis.1c00546}
+}
 @misc{DHHS2023,
     author = {{Panel on Antiretroviral Guidelines for Adults and Adolescents}},
     title = {Guidelines for the Use of Antiretroviral Agents in Adults and Adolescents with HIV},
