feat: Update preprint to v2 with dual external validation
- Updated arxiv_preprint.tex with corrected HXB2 coordinates (546-556)
- Reframed 'immutability' as 'high-barrier thermodynamic constraints'
- Added ΔNGFR humanized reporter for Sentinel Cells
- Acknowledged Enfuvirtide resistance data (V38A, N43D)
- Added new sections: Resistance Considerations, Future Directions
- Added Greenberg2004JAC reference for Enfuvirtide resistance
- Added Edison research files and validation documents
- Validated by Consensus.app and Gemini Deep Research
- Published to Zenodo as v2

--- a/proposals/arxiv_preprint.tex
+++ b/proposals/arxiv_preprint.tex
@@ -26,7 +26,7 @@
 }
 
 % ===== TITLE =====
-\title{\textbf{The Entropic Vise: A Physics-Based Framework for HIV-1 Eradication Through Thermodynamic Targeting, Adversarial Prediction, and Real-Time Latency Detection}}
+\title{\textbf{The Entropic Vise: A Physics-Based Framework for High-Barrier Thermodynamic Targeting of HIV-1 Through Constrained Generative Modeling and Real-Time Latency Detection}}
 
 % ===== AUTHORS =====
 \author[1]{Rhine Lesther Tague}
@@ -41,7 +41,7 @@
 
 % ===== ABSTRACT =====
 \begin{abstract}
-Current HIV therapeutics target biological features that evolution can modify, explaining why 30+ antiretroviral drugs achieve suppression but not cure. We propose a physics-based framework that exploits \textit{thermodynamic constraints}---regions where mutations are physically lethal to the virus. Our approach comprises three integrated components: (1) \textbf{The Entropic Vise}, targeting the gp41 HR1 domain (residues 568-576) which exhibits Shannon entropy $H = 0.0$ bits across 500,000+ sequences spanning 40 years, indicating thermodynamic prohibition of mutation; (2) \textbf{The Thermodynamically Constrained GAN (TC-GAN)}, a generative adversarial network with entropy, structural, and fitness penalty terms that predicts future viral variants before they emerge, enabling prospective rather than retrospective vaccine design; and (3) \textbf{Sentinel Cells}, autologous CD4+ T cells engineered with Tat-responsive luciferase reporters that provide real-time detection of viral reactivation, transforming ``undetectable'' from a measurement limit to verified biological silence. Preliminary computational analysis of 3,552 HIV-1 envelope sequences confirms the Entropic Vise hypothesis, with the HR1 domain showing 8.52-fold lower entropy than the variable V3 loop ($p = 2.57 \times 10^{-5}$). This framework represents a paradigm shift from reactive biology to predictive physics, establishing principles applicable to any rapidly evolving pathogen.
+Current HIV therapeutics target biological features that evolution can modify, explaining why 30+ antiretroviral drugs achieve suppression but not cure. We propose a physics-based framework that exploits \textit{high-barrier thermodynamic constraints}---regions where mutations impose severe fitness costs on the virus. Our approach comprises three integrated components: (1) \textbf{The Entropic Vise}, targeting the gp41 HR1 domain (HXB2 residues 546--556, sequence SGIVQQQNNLL) which exhibits near-zero Shannon entropy across 500,000+ sequences spanning 40 years, indicating strong purifying selection; (2) \textbf{Thermodynamically Constrained Generative Models}, which predict future viral variants before they emerge, enabling prospective rather than retrospective therapeutic design; and (3) \textbf{Sentinel Cells}, autologous CD4+ T cells engineered with Tat-responsive humanized reporters ($\Delta$NGFR) that provide real-time detection of viral reactivation, transforming ``undetectable'' from a measurement limit to verified biological silence. Preliminary computational analysis of 3,552 HIV-1 envelope sequences supports the Entropic Vise hypothesis, with the HR1 domain showing 8.52-fold lower entropy than the variable V3 loop ($p = 2.57 \times 10^{-5}$). While clinical data from Enfuvirtide demonstrates that resistance mutations (e.g., V38A, N43D) can emerge in this region under selective pressure, these escape mutants exhibit significant fitness costs and attenuated replication kinetics. This framework represents a paradigm shift from reactive biology to predictive physics, establishing \textit{high-barrier targeting} as a principle applicable to rapidly evolving pathogens.
 
 \vspace{6pt}
 \noindent\textbf{Keywords:} HIV-1, Shannon entropy, thermodynamic constraints, generative adversarial networks, viral evolution, latent reservoir, computational virology
@@ -78,26 +78,28 @@ Shannon entropy $H = -\sum p(x) \log_2 p(x)$ measures sequence variability. Regi
 
 Our framework comprises three integrated aims addressing complementary aspects of HIV persistence.
 
-\subsection{Aim 1: The Entropic Vise---Thermodynamic Targeting}
+\subsection{Aim 1: The Entropic Vise---High-Barrier Thermodynamic Targeting}
 
 \subsubsection{Rationale}
-The gp41 HR1 domain (residues 568--576) forms the six-helix bundle essential for membrane fusion. We hypothesize that this region represents a ``thermodynamic dead zone'' where any mutation catastrophically disrupts protein folding.
+The gp41 HR1 domain (HXB2 residues 546--556, sequence SGIVQQQNNLL) forms the six-helix bundle essential for membrane fusion. This region exhibits near-zero Shannon entropy across global sequence databases, indicating strong purifying selection. While not absolutely immutable---clinical data from Enfuvirtide (T-20) demonstrates that resistance mutations such as V38A and N43D can emerge under strong selective pressure---these escape mutants exhibit significant fitness costs, including reduced fusion kinetics and attenuated replication \citep{Greenberg2004JAC}. We hypothesize that this region represents a ``high-barrier'' target where escape requires paying a substantial thermodynamic penalty.
 
 \subsubsection{Computational Validation}
 \begin{itemize}[leftmargin=*]
 \item \textbf{Data Source:} Los Alamos HIV Database ($>$500,000 sequences, 1983--2023)
 \item \textbf{Analysis:} Position-specific Shannon entropy calculation
-\item \textbf{Observation:} The SGIVQQQNNLL motif shows $H = 0.0$ bits---zero variation in 40 years
-\item \textbf{Interpretation:} Physics forbids mutation at these positions
+\item \textbf{Observation:} The SGIVQQQNNLL motif shows near-zero entropy---minimal variation in 40 years
+\item \textbf{Interpretation:} Strong purifying selection maintains this sequence; mutations impose fitness costs
 \end{itemize}
 
 \subsubsection{Therapeutic Strategy}
 Engineer aptamer-protease chimeras (``molecular scissors'') that:
 \begin{enumerate}[leftmargin=*]
 \item Recognize HR1 via high-affinity aptamer binding ($K_d < 5$ nM), leveraging the established efficacy of RNA aptamers for HIV-1 inhibition and targeted delivery \citep{Neff2011SciTranslMed, Zhou2008MolTher, Zhou2013MolTher, Zhou2015ChemBiol, Duclair2015MTNA, Lange2017NAR, Shum2013Pharmaceuticals, Chakraborty2022ACSInfectDis}
-\item Deliver HIV-1 protease payload for targeted Env cleavage
-\item Achieve irreversible inactivation with no escape pathway
+\item Deliver protease payload for targeted Env cleavage
+\item Achieve irreversible inactivation via enzymatic mechanism
 \end{enumerate}
+
+\textbf{Mechanistic Distinction from Competitive Inhibitors:} Unlike Enfuvirtide, which functions as a competitive peptide inhibitor (reversible binding), our aptamer-protease approach employs irreversible enzymatic cleavage. Whether this mechanistic difference alters the resistance profile remains an open empirical question requiring direct experimental testing.
 
 \subsection{Aim 2: TC-GAN---Adversarial Variant Prediction}
 
@@ -133,17 +135,20 @@ Retrospective validation: train on pre-2015 sequences, test prediction of 2016--
 Current latency assays underestimate reservoir size by 60-fold. We propose ``honeypot'' cells that actively report viral reactivation.
 
 \subsubsection{Reporter Design}
+To avoid immune rejection of xenogeneic reporters (e.g., marine-derived luciferases), we employ humanized, non-immunogenic surface markers validated in CAR-T cell therapy:
 \begin{itemize}[leftmargin=*]
-\item HIV-1 LTR promoter $\rightarrow$ Gaussia luciferase (secreted, real-time detection)
-\item Minimal TAR $\times$ 5 repeats $\rightarrow$ NanoLuc (high sensitivity)
-\item Dual reporter: GLuc + mCherry (cell tracking)
+\item HIV-1 LTR promoter $\rightarrow$ $\Delta$NGFR (truncated nerve growth factor receptor, non-signaling)
+\item Minimal TAR $\times$ 5 repeats $\rightarrow$ Truncated CD19 (detectable by flow cytometry)
+\item Dual reporter: $\Delta$NGFR + mCherry (cell tracking in preclinical models)
 \end{itemize}
+
+\textbf{Immunogenicity Considerations:} Xenogeneic reporters such as Gaussia luciferase or NanoLuc, while useful in vitro and in immunodeficient models, would trigger rapid immune clearance in immunocompetent human hosts, rendering long-term monitoring unfeasible.
 
 \subsubsection{Validation Strategy}
 \begin{enumerate}[leftmargin=*]
-\item In vitro: Transfect with Tat expression plasmid, measure LOD
-\item HIV challenge: Infect Sentinel Cells, correlate luminescence with p24
-\item In vivo: Deploy in humanized mice, monitor during analytical treatment interruption
+\item In vitro: Transfect with Tat expression plasmid, measure $\Delta$NGFR surface expression
+\item HIV challenge: Infect Sentinel Cells, correlate $\Delta$NGFR expression with p24
+\item In vivo: Deploy in humanized mice, monitor $\Delta$NGFR expression during analytical treatment interruption
 \end{enumerate}
 
 % ===== 3. PRELIMINARY RESULTS =====
@@ -170,32 +175,55 @@ These results confirm that the HR1 domain represents a thermodynamically constra
 % ===== 4. DISCUSSION =====
 \section{Discussion}
 
-\subsection{Advantages Over Traditional Approaches}
+\subsection{Advantages of High-Barrier Targeting}
 
 Our physics-based framework offers several advantages:
 
 \begin{enumerate}[leftmargin=*]
-\item \textbf{Escape-proof targeting:} Regions with $H = 0.0$ cannot mutate without loss of function
-\item \textbf{Prospective defense:} TC-GAN predicts variants before emergence, enabling preemptive vaccines
-\item \textbf{Quantitative verification:} Sentinel Cells provide real-time proof of cure vs suppression
+\item \textbf{High-barrier resistance:} Regions with near-zero entropy impose significant fitness costs on escape mutants, converting a lethal infection into a potentially manageable condition
+\item \textbf{Prospective therapeutic design:} Generative models predict variants before emergence, enabling preemptive intervention
+\item \textbf{Quantitative verification:} Sentinel Cells provide real-time proof of cure versus suppression
 \end{enumerate}
 
-\subsection{Potential Limitations and Alternative Strategies}
+\subsection{Resistance Considerations: Lessons from Enfuvirtide}
 
-\textbf{GAN Training Instability.} Multi-objective optimization may cause mode collapse. Alternatives include progressive constraint introduction, VAE replacement, or transformer-based language models.
+The clinical history of Enfuvirtide (T-20) provides critical context for this framework. T-20 targets the same HR1 region via competitive peptide inhibition, and resistance mutations (V38A, Q40H, N43D) emerge within weeks under selective pressure \citep{Greenberg2004JAC}. This demonstrates that the HR1 region is not absolutely immutable.
 
-\textbf{Predictive Accuracy.} Generated sequences may fail to match actual emerging variants. Alternatives include hybrid physics-phylogenetic models, ensemble approaches, and active learning with real-time updates.
+However, two distinctions merit attention:
 
-\textbf{Clinical Translation.} Sentinel Cell manufacturing and safety require extensive validation before human trials.
+\textbf{1. Fitness Cost.} Enfuvirtide-resistant mutants exhibit reduced replication kinetics and, paradoxically, clinical studies have observed CD4+ T cell count recovery in patients harboring resistant virus, suggesting attenuated pathogenesis.
+
+\textbf{2. Mechanistic Difference.} Our aptamer-protease approach employs irreversible enzymatic cleavage rather than reversible competitive inhibition. Whether this mechanistic distinction alters the resistance profile is an empirical question that has not been directly tested. Notably, second-generation fusion inhibitors (e.g., T-1249, Sifuvirtide) demonstrate significantly reduced susceptibility to V38A mutations compared to T-20, suggesting that alternative targeting strategies can bypass Enfuvirtide resistance.
+
+\subsection{Limitations and Alternative Strategies}
+
+\textbf{Generative Modeling Architecture.} Generative Adversarial Networks face mode collapse risks and computational constraints when integrating differentiable structure prediction. Recent advances in diffusion models (e.g., RFdiffusion, ProteinMPNN) offer superior performance for protein design with hard structural constraints. Future work should explore these architectures as alternatives to GANs.
+
+\textbf{Aptamer-Mutant Binding.} Whether aptamers designed against wild-type HR1 would maintain binding affinity to V38A mutants is unknown. Systematic SELEX selection against a panel of resistance mutants would be required.
+
+\textbf{Clinical Translation.} Sentinel Cell manufacturing and safety require extensive validation. The proposed $\Delta$NGFR reporter has been validated in CAR-T therapy but not specifically in HIV latency monitoring.
+
+\subsection{Future Directions}
+
+To test the core hypothesis that irreversible mechanisms exhibit different resistance profiles than competitive inhibitors, we propose:
+
+\begin{enumerate}[leftmargin=*]
+\item \textbf{SELEX Selection:} Generate aptamer libraries against both wild-type and V38A mutant gp41 HR1 peptides
+\item \textbf{Binding Kinetics:} Compare K$_d$ values across mutation panels
+\item \textbf{Cleavage Assays:} Measure protease cleavage efficiency against wild-type and mutant substrates
+\item \textbf{Resistance Selection:} Passage virus in the presence of aptamer-protease conjugates to characterize escape mutation landscapes
+\end{enumerate}
+
+These experiments would establish whether high-barrier thermodynamic targeting via enzymatic mechanisms constitutes a viable therapeutic strategy distinct from existing fusion inhibitors.
 
 \subsection{Broader Implications}
 
-This framework establishes principles applicable to any rapidly evolving pathogen. The core insight---targeting thermodynamic constraints rather than biological sequences---represents a paradigm shift from reactive to predictive medicine.
+This framework establishes principles applicable to any rapidly evolving pathogen. The core insight---targeting high-barrier thermodynamic constraints rather than mutable biological sequences---represents a paradigm shift from reactive to predictive medicine.
 
 % ===== 5. CONCLUSION =====
 \section{Conclusion}
 
-We present the Entropic Vise, a physics-based framework for HIV-1 eradication comprising three integrated components: thermodynamic targeting of immutable regions, adversarial prediction of future variants, and real-time detection of viral reactivation. Preliminary computational analysis confirms the existence of ``thermodynamic dead zones'' in HIV-1 Env with $H = 0.0$ bits entropy. This approach transforms HIV treatment from an endless game of catch-up with viral evolution to a physics-based certainty that evolution cannot circumvent.
+We present the Entropic Vise, a physics-based framework for HIV-1 therapeutic development comprising three integrated components: high-barrier thermodynamic targeting of conserved regions, generative prediction of future variants, and real-time detection of viral reactivation. Preliminary computational analysis supports the hypothesis that the gp41 HR1 domain is under strong purifying selection. While clinical data from Enfuvirtide demonstrates that resistance is possible under selective pressure, these escape mutants exhibit significant fitness costs. Whether aptamer-protease conjugates employing irreversible cleavage mechanisms face similar resistance profiles remains an open empirical question. This framework proposes a testable hypothesis for high-barrier targeting as a complementary strategy to existing antiretroviral approaches.
 
 % ===== ACKNOWLEDGMENTS =====
 \section*{Acknowledgments}
