--- a/proposals/references.bib
+++ b/proposals/references.bib
@@ -173,3 +173,14 @@
     year = {2023},
     publisher = {Department of Health and Human Services}
 }
+
+@article{Greenberg2004JAC,
+    author = {Greenberg, Michael L. and Cammack, Nick},
+    title = {Resistance to enfuvirtide, the first HIV fusion inhibitor},
+    journal = {Journal of Antimicrobial Chemotherapy},
+    year = {2004},
+    volume = {54},
+    number = {2},
+    pages = {333--340},
+    doi = {10.1093/jac/dkh330}
+}
