chore: Archive legacy v1 proposal and update main reference draft
- Archived original NIH proposal (v1) to proposals/archive/main_v1_legacy.tex
- Updated proposals/archive/main.tex to align with Framework v2:
  - Corrected HR1 coordinates to 546-556 (SGIVQQQNNLL)
  - Updated terminology (High-Barrier vs Immutable)
  - Updated reporter Design (Delta-NGFR vs Luciferase)

--- a/proposals/archive/main_v1_legacy.tex
+++ b/proposals/archive/main_v1_legacy.tex
@@ -106,12 +106,12 @@ Physics-based approach quantifies ENERGETIC COST of mutation \cite{Wylie2011PNAS
 \item Interpretation: Mutations in these regions are LETHAL (thermodynamically forbidden).
 \end{itemize}
 
-\textbf{The Entropic Vise (gp41 HR1, residues 546-556): $H \approx 0.0$ bits}
+\textbf{The Entropic Vise (gp41 HR1, residues 568-576): $H = 0.0$ bits}
 \begin{itemize}
 \item Data source: Los Alamos HIV Database ($>$500,000 sequences, 1983-2023).
-\item Observation: Minimal variation; documented escape mutants (V38A) show reduced fitness.
-\item Physical interpretation: This region imposes a HIGH-BARRIER thermodynamic constraint.
-\item Mechanistic basis: HR1 forms six-helix bundle with HR2; stability requires precise packing.
+\item Observation: ZERO naturally occurring variation in 40 years of evolution.
+\item Physical interpretation: This region CANNOT mutate without catastrophic loss of function.
+\item Mechanistic basis: HR1 forms six-helix bundle with HR2 during membrane fusion; thermodynamic stability requires precise hydrophobic packing.
 \end{itemize}
 
 \textbf{Why this matters:}
@@ -163,9 +163,9 @@ Traditional latency measurement is PASSIVE:
 
 Our Sentinel Cell approach is ACTIVE (Zero-Trust Forensics):
 \begin{itemize}
-\item Engineer autologous CD4+ T cells with humanized Tat-responsive reporter ($\Delta$NGFR).
-\item Reinfuse into patient as ``honeytokens''.
-\item Any viral reactivation triggers reporter expression detectable in real-time.
+\item Engineer autologous CD4+ T cells with Tat-responsive luciferase reporter.
+\item Reinfuse into patient as ``honeypot'' targets.
+\item Any viral reactivation triggers luminescent signal detectable in real-time.
 \item Interpretation: ``Verified silent'' = active monitoring confirms no reactivation, NOT measurement failure.
 \end{itemize}
 
@@ -264,9 +264,10 @@ AIM 1: THE ENTROPIC VISE - THERMODYNAMIC TARGETING
 
 
 RATIONALE:
-HIV-1 gp41 HR1 region (HXB2 residues 546-556: SGIVQQQNNLL) exhibits near-zero Shannon 
-entropy. This indicates a high-barrier thermodynamic constraint. We will exploit this vulnerability by designing 
-aptamer-protease chimeras.
+HIV-1 gp41 HR1 region (residues 568-576: WMEWDREINN) exhibits zero Shannon 
+entropy across >500,000 sequences. This indicates thermodynamic constraint, not 
+evolutionary conservation. We will exploit this immutability by designing 
+aptamer-protease chimeras that irreversibly inactivate Env.
 
 HYPOTHESIS:
 Targeted proteolysis of the HR1 ``Entropic Vise'' will prevent membrane fusion 
@@ -283,10 +284,11 @@ We have computationally validated the ``Entropic Vise'' hypothesis using 3,552 d
 \includegraphics[width=0.85\textwidth]{image.png}
 \caption{\textbf{Identification of the Thermodynamic Dead Zone in HIV-1 gp41 HR1.} 
 Shannon entropy analysis of n=3,552 HIV-1 gp160 sequences reveals extreme conservation in the HR1 domain. 
-(\textbf{Left}) Position-specific entropy plot comparing HR1 (blue, residues 546-556) vs. V3 loop (red, control region showing high variability). 
-(\textbf{Right}) Distribution comparison. The core motif (SGIVQQQNNLL) exhibits \textbf{near-zero entropy}. 
-Mean HR1 entropy: 0.176 bits; Mean V3 entropy: 1.502 bits. 
-This confirms the ``Entropic Vise'' as a thermodynamically constrained high-barrier region.}
+(\textbf{Left}) Position-specific entropy plot comparing HR1 (blue, residues 568-576) vs. V3 loop (red, control region showing high variability). 
+(\textbf{Right}) Distribution comparison. Six consecutive residues (QQLLGIW, positions 3-8) exhibit \textbf{0.000 bits of entropy} (100\% conservation across all analyzed sequences). 
+Mean HR1 entropy: 0.176 bits (95\% CI: $\pm$0.396); Mean V3 entropy: 1.502 bits. 
+Statistical significance: 8.52-fold difference ($p=2.57 \times 10^{-5}$, Mann-Whitney U test), effect size $d=2.53$. 
+This confirms the ``Entropic Vise'' as a thermodynamically constrained region where mutations are lethal \cite{Gong2013eLife,Wylie2011PNAS,Zeldovich2007PNAS}.}
 \label{fig:entropy}
 \end{figure}
 
@@ -307,7 +309,7 @@ EXPERIMENTAL DESIGN:
 \item Statistical validation: Bootstrap resampling (n=1000) to confirm stability.
 \end{itemize}
 
-Expected outcome: Confirm HR1 region 546-556 has $H \approx 0.0$ bits.
+Expected outcome: Confirm HR1 region 568-576 has $H \approx 0.0$ bits with 95\% CI.
 
 \textbf{Step 2: Structural Validation}
 \begin{itemize}
@@ -335,7 +337,7 @@ Expected outcome: HR1 dN/dS $<$ 0.1, confirming multi-level constraint.
 \textbf{Step 1: SELEX (Systematic Evolution of Ligands by Exponential Enrichment)}
 \begin{itemize}
 \item Synthesize random RNA library ($10^{14}$ sequences, 40-nucleotide variable region).
-\item Target: Synthetic HR1 peptide (residues 546-556) in pre-fusion conformation.
+\item Target: Synthetic HR1 peptide (residues 565-580) in pre-fusion conformation.
 \item Incubate library with immobilized HR1 peptide.
 \item Wash away non-binders with increasing stringency (0.5-2 M NaCl).
 \item Elute bound aptamers, reverse transcribe, PCR amplify.
@@ -560,7 +562,7 @@ natural sequences (discriminator accuracy $\approx$50\% on test set).
 \begin{itemize}
 \item Calculate position-specific Shannon entropy $H(i)$ for all 856 positions.
 \item Identify ``frozen'' positions: $H(i) < 0.1$ bits (near-zero variation).
-\item Expected frozen positions: HR1 (546-556), MPER (662-683), fusion peptide (512-527).
+\item Expected frozen positions: HR1 (568-576), MPER (662-683), fusion peptide (512-527).
 \item Define entropy penalty term:
 \end{itemize}
 
@@ -765,11 +767,11 @@ EXPERIMENTAL DESIGN:
 
 \textbf{Step 1: Tat-Responsive Reporter Vector Construction}
 \begin{itemize}
-\item Design 1: HIV-1 LTR promoter $\rightarrow$ humanized $\Delta$NGFR (surface marker).
-\item Design 2: Minimal Tat-responsive element (TAR) $\rightarrow$ Truncated CD19.
-\item Design 3: Dual reporter: $\Delta$NGFR (isolation) + mCherry (tracking).
-\item Cloning strategy: Lentiviral vector backbone (pLenti) for stable integration.
-\item Control constructs: Constitutive promoter (CMV-$\Delta$NGFR), no-Tat control.
+\item Design 1: HIV-1 LTR promoter $\rightarrow$ Gaussia luciferase (GLuc, secreted).
+\item Design 2: Minimal Tat-responsive element (TAR) $\times$ 5 repeats $\rightarrow$ NanoLuc.
+\item Design 3: Dual reporter: GLuc (immediate readout) + mCherry (cell tracking).
+\item Cloning strategy: Lentiviral vector backbone (pLenti-CMV) for stable integration.
+\item Control constructs: Constitutive promoter (CMV-GLuc), no-Tat control.
 \end{itemize}
 
 Expected outcome: 3 candidate reporter constructs with $>$100-fold Tat induction.
