style: Update Acknowledgments to first-person convention

--- a/proposals/arxiv_preprint.tex
+++ b/proposals/arxiv_preprint.tex
@@ -227,7 +227,7 @@ We present the Entropic Vise, a physics-based framework for HIV-1 therapeutic de
 
 % ===== ACKNOWLEDGMENTS =====
 \section*{Acknowledgments}
-The author expressly acknowledges that this research was conducted independently. Sequence data was sourced from the Los Alamos HIV Sequence Database and the Stanford HIV Drug Resistance Database (Palo Alto). The author acknowledges the assistance of the ``Edison'' AI Agent for data synthesis and literature analysis.
+I expressly acknowledge that this research was conducted independently. Sequence data was sourced from the Los Alamos HIV Sequence Database and the Stanford HIV Drug Resistance Database (Palo Alto). I acknowledge the assistance of the ``Edison'' AI Agent for data synthesis and literature analysis.
 
 % ===== CODE AVAILABILITY =====
 \section*{Code and Data Availability}
